--- a/graph.dSYM/Contents/Resources/Relocations/aarch64/graph.yml
+++ b/graph.dSYM/Contents/Resources/Relocations/aarch64/graph.yml
@@ -2,11 +2,11 @@
 triple:          'arm64-apple-darwin'
 binary-path:     graph
 relocations:
-  - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _report_d, symObjAddr: 0x18670, symBinAddr: 0x10000C008, symSize: 0x0 }
-  - { offsetInCU: 0x6E, offset: 0x6E, size: 0x8, addend: 0x0, symName: _report_dh, symObjAddr: 0x18800, symBinAddr: 0x10000C198, symSize: 0x0 }
-  - { offsetInCU: 0x83, offset: 0x83, size: 0x8, addend: 0x0, symName: _report_k, symObjAddr: 0x18990, symBinAddr: 0x10000C328, symSize: 0x0 }
-  - { offsetInCU: 0x98, offset: 0x98, size: 0x8, addend: 0x0, symName: _source, symObjAddr: 0x18B20, symBinAddr: 0x10000C4B8, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xC0, size: 0x8, addend: 0x0, symName: _destination, symObjAddr: 0x18BE8, symBinAddr: 0x10000C580, symSize: 0x0 }
+  - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _report_d, symObjAddr: 0x18668, symBinAddr: 0x10000C008, symSize: 0x0 }
+  - { offsetInCU: 0x6E, offset: 0x6E, size: 0x8, addend: 0x0, symName: _report_dh, symObjAddr: 0x187F8, symBinAddr: 0x10000C198, symSize: 0x0 }
+  - { offsetInCU: 0x83, offset: 0x83, size: 0x8, addend: 0x0, symName: _report_k, symObjAddr: 0x18988, symBinAddr: 0x10000C328, symSize: 0x0 }
+  - { offsetInCU: 0x98, offset: 0x98, size: 0x8, addend: 0x0, symName: _source, symObjAddr: 0x18B18, symBinAddr: 0x10000C4B8, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xC0, size: 0x8, addend: 0x0, symName: _destination, symObjAddr: 0x18BE0, symBinAddr: 0x10000C580, symSize: 0x0 }
   - { offsetInCU: 0x2FB0, offset: 0x2FB0, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB7v160006IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0xB74, symBinAddr: 0x1000046AC, symSize: 0x1EC }
   - { offsetInCU: 0x48EE, offset: 0x48EE, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB7v160006INS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc, symObjAddr: 0x764, symBinAddr: 0x10000429C, symSize: 0x48 }
   - { offsetInCU: 0x4934, offset: 0x4934, size: 0x8, addend: 0x0, symName: __ZNSt3__14endlB7v160006IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_, symObjAddr: 0x7D8, symBinAddr: 0x100004310, symSize: 0x58 }
